@@ -10,6 +10,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <mainClass>com.huanli233.xtcdecrypter.main.DecrypterMain</mainClass>
   </properties>
   
   <dependencies>
@@ -109,6 +110,38 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>io.github.fvarrui</groupId>
+        <artifactId>javapackager</artifactId>
+        <version>1.7.2</version>
+        <configuration>
+        	<packagingJdk>C:\Program Files\Java\jdk-17.0.2</packagingJdk>
+            <name>xtcdecrypter</name>
+            <bundleJre>true</bundleJre>
+            <mainClass>${mainClass}</mainClass>
+            <generateInstaller>false</generateInstaller>
+            <copyDependencies>true</copyDependencies>
+        </configuration>
+        <executions>
+            <execution>
+                <id>bundling-for-windows</id>
+                <phase>package</phase>
+                <goals>
+                    <goal>package</goal>
+                </goals>
+                <configuration>
+                    <platform>windows</platform>
+                    <createZipball>true</createZipball>
+                    <vmArgs>-XX:+UseZGC -Dfile.encoding=UTF-8</vmArgs>
+                    <winConfig>
+		                <generateMsi>false</generateMsi>
+		                <generateMsm>false</generateMsm>
+            			<headerType>console</headerType>
+                    </winConfig>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
     </plugins>
   </build>
 </project>
